workloads/routing/gateway/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-ingress
  namespace: istio-system
  annotations:
    # External DNS 호스트 목록 (쉼표 구분)
    external-dns.alpha.kubernetes.io/hostname: >-
      api.dev.growbin.app,
      argocd.dev.growbin.app,
      grafana.dev.growbin.app,
      kiali.dev.growbin.app,
      jaeger.dev.growbin.app,
      kibana.dev.growbin.app
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
